# Smart-ERP-Next

./: .env.example  .env.production  .env.production.example  .env.staging.example  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  DEVELOPMENT.md  Dockerfile  GAPS.md  PRODUCTION_CHECKLIST.md  README.md  api_errors.txt  deploy.ps1  dev.bat  docker-compose.local.yml  docker-compose.monitoring.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  ecommerce_full.txt  jest.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md  test-result.json  tsconfig.json  turbo.json
.githooks/: pre-commit
.github/: dependabot.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
docs/: USER_GUIDE_VI.md  api-errors.md  api-versioning.md  api.md  beta-testing-guide.md  competitive-positioning.md  forecast-api.md  i18n-parity.md  migration-rollback.md  modules.md  observability.md  pii-classification.md  production-setup-guide.md  pwa-offline.md  qa-gates.md  roadmap.md  semver-policy.md  team-role-gap-assessment.md
e2e/: accessibility.spec.ts  playwright.config.ts  visual-regression.spec.ts
ops/: simple-seed.sql
scripts/: audit-e2e-assertions.js  audit-i18n-parity.js  audit-i18n-runtime-keys.js  audit-secrets.js  backup.sh  ci-local.ps1  ci-local.sh  db-rollback.js  deploy-production.sh  download-eas-artifacts.js  ensure-desktop-release-artifact.js  first-time-setup.sh  fix-ts-nocheck.js  generate-sbom.js  (+17 more)
(+640 files in other folders)
