[package]
name = "smart-erp-desktop"
version = "0.4.0"
description = "Smart ERP Next - Desktop Application"
authors = ["Smart ERP Team"]
license = "MIT"
repository = "https://github.com/smart-erp/smart-erp-next"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
